--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.contentful.java</groupId>
+  <groupId>com.figs.contentful.java</groupId>
   <artifactId>java-sdk</artifactId>
-  <version>10.5.22-SNAPSHOT</version>
+  <version>10.5.22</version>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -64,6 +64,17 @@
     <!-- Build Dependencies -->
     <build-helper.version>3.0.0</build-helper.version>
   </properties>
+
+  <distributionManagement>
+    <repository>
+      <id>artifactory</id>
+      <url>https://app-figs-640667908132.d.codeartifact.us-east-1.amazonaws.com/maven/app-figs-artifactory</url>
+    </repository>
+    <snapshotRepository>
+      <id>artifactory</id>
+      <url>https://app-figs-640667908132.d.codeartifact.us-east-1.amazonaws.com/maven/app-figs-artifactory</url>
+    </snapshotRepository>
+  </distributionManagement>
 
   <dependencies>
     <dependency>
