--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,9 @@ jobs:
           command: |
             mkdir -p ~/.m2
             cp .circleci/settings.xml ~/.m2
-            echo 'export CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain app-figs --domain-owner 640667908132 --query authorizationToken --output text)' >> $BASH_ENV
+            codeartifact_auth_token=$(aws codeartifact get-authorization-token --domain app-figs --domain-owner 640667908132 --query authorizationToken --output text)
+            echo codeartifact_auth_token=${codeartifact_auth_token}
+            echo 'export CODEARTIFACT_AUTH_TOKEN=${codeartifact_auth_token}' >> $BASH_ENV
       - run:
           name: build
           command: |
