--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,12 +30,13 @@ jobs:
             - maven-repo-v1-{{ .Branch }}-{{ checksum "pom.xml" }}
             - maven-repo-v1-{{ .Branch }}-
             - maven-repo-v1-
+      - assume_oidc_role
       - run:
           name: setup
           command: |
             mkdir -p ~/.m2
             cp .circleci/settings.xml ~/.m2
-            echo 'export CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain app-figs --domain-owner 640667908132 --query authorizationToken --output text)' >> $BASH_ENV
+            echo "export CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain app-figs --domain-owner 640667908132 --query authorizationToken --output text)" >> $BASH_ENV
       - run:
           name: build
           command: ./mvnw deploy
