--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 
   <groupId>com.figs.contentful.java</groupId>
   <artifactId>java-sdk</artifactId>
-  <version>10.5.24</version>
+  <version>10.5.25-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
   <description>Java SDK for Contentful's Content Delivery API.</description>
-  <url>http://github.com/contentful/contentful.java</url>
+  <url>https://github.com/figs-engineering/contentful.java</url>
 
   <parent>
     <groupId>org.sonatype.oss</groupId>
@@ -17,15 +17,15 @@
   </parent>
 
   <scm>
-    <url>http://github.com/contentful/contentful.java</url>
-    <connection>scm:git:git://github.com/contentful/contentful.java.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/contentful/contentful.java.git</developerConnection>
+    <url>https://github.com/figs-engineering/contentful.java</url>
+    <connection>scm:git:git://github.com/figs-engineering/contentful.java.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/figs-engineering/contentful.java.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
     <system>GitHub Issues</system>
-    <url>http://github.com/contentful/contentful.java/issues</url>
+    <url>http://github.com/figs-engineering/contentful.java/issues</url>
   </issueManagement>
 
   <licenses>
