--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,9 +37,20 @@ jobs:
             mkdir -p ~/.m2
             cp .circleci/settings.xml ~/.m2
             echo "export CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain app-figs --domain-owner 640667908132 --query authorizationToken --output text)" >> $BASH_ENV
-      - run:
-          name: build
-          command: ./mvnw deploy
+      - when:
+          condition:
+            equal: [master, << pipeline.git.branch >>]
+          steps:
+            - run:
+                name: release
+                command: ./mvnw -B release:prepare release:perform deploy
+      - unless:
+          condition:
+            equal: [ master, << pipeline.git.branch >> ]
+          steps:
+            - run:
+                name: build
+                command: ./mvnw deploy
       - save_cache:
           key: maven-repo-v1-{{ .Branch }}-{{ checksum "pom.xml" }}
           paths:
