--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <url>https://github.com/figs-engineering/contentful.java</url>
     <connection>scm:git:git://github.com/figs-engineering/contentful.java.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/figs-engineering/contentful.java.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>java-sdk-10.5.25</tag>
   </scm>
 
   <issueManagement>
@@ -225,6 +225,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <version>3.1.1</version>
+        <configuration>
+          <signTag>false</signTag>
+        </configuration>
       </plugin>
 
       <plugin>
