configure git for release

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,20 @@ jobs:
           steps:
             - run:
                 name: release
-                command: ./mvnw -B release:prepare release:perform deploy
+                command: |
+                  export GRGIT_USER=figs-ci-bot
+                  export GRGIT_PASS=$CI_BOT_GITHUB_ACCESS_TOKEN
+                
+                  git config --global user.name "$GRGIT_USER"
+                  git config --global user.email "figs.engineering+$GRGIT_USER@wearfigs.com"
+                
+                  git remote rm origin
+                  git remote add origin "https://figs-ci-bot:$CI_BOT_GITHUB_ACCESS_TOKEN@github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"
+                
+                  git fetch origin
+                
+                  git branch --set-upstream-to "origin/$CIRCLE_BRANCH"
+                  ./mvnw -B release:prepare release:perform deploy
       - unless:
           condition:
             equal: [ master, << pipeline.git.branch >> ]
@@ -63,4 +76,5 @@ jobs:
 workflows:
   build-workflow:
     jobs:
-      - build
+      - build:
+          context: service-common
